# rust_wave

./: :w  Cargo.toml
src/: main.rs
